Email field-alignment issues for form-control

--- a/src/app/views/scan-screen/scan-screen.component.less
+++ b/src/app/views/scan-screen/scan-screen.component.less
@@ -37,6 +37,6 @@ scan-screen {
 
 @media (max-width :1024px){
     .form-control {
-        width:98.5%;
+        width:100%;
     }
 }
